--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE HTML>
+<html>
+  <head>
+    <title>Hello World</title>
+  </head>
+  <body> My name Is Larry</body>
+</html>
