--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title> 
+    <h1> Run to the market</h1>
+    </title>
+  
+  </head>
+  
+  <body>Run to the store</body>
+</html>
