--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<!-- Write your HTML in this file -->
+<!doctype html>
+<html>
+  <head>
+    <title>Welcome</title>
+    </head>
+    <body>
+<h1>Hello World!</h1>
+<h2>Drybabery is Eternal!</h2>
+<p>Click below to be taken to our website</p>
+<a target="_blank" href="https://www.drybabes.com">DRYBABES</a>
+<p></p>
+<img src="https://static1.squarespace.com/static/5b5dee4c1aef1de885067584/t/5b5e0def758d46f72cf3e45b/1532890657732/maya.jpg?format=500w" alt="picture of Maya Angelou, writing with books around her">
+<p></p>
+<h3>Why DRYBABES are important</h3>
+<ol>
+  <li><a href="https://www.dictionary.com/browse/expression">Expression</a></li>
+  <li>Alternative</li>
+  <li>Free</li> 
+  <li>Rejuvenated</li>
+  <li>No Conditons</li>
+  <li>Eternal Beings</li>
+  </ol>
