--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>ball</title>
-  </head>
-  <body></body>
+<head>
+<title>Get Motivated</title>
+</head>
+<body>
+  
+</body>
 </html>
